tests/errors/lifetime/loan/nested_field_ancestor_conflicts.sim

        struct Inner: Copy + Drop { x: i64 y: i64 }
        struct Outer: Copy + Drop { i: Inner c: i64 }
        extern fn use_mut(r: &mut i64);
        fn f(o: Outer) {
          r: &mut i64;
          y: Inner;
          entry:
            r = &mut o.i.x;
            y = copy o.i;
            call use_mut(move r);
            return
        }
        